add draw control

--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+.custom-draw-marker {
+  background: transparent;
+  border: none;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
